typescript/checker/tests/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion01.ts.stderr
error: TupleIndexError {
    span: Span {
        lo: BytePos(
            52,
        ),
        hi: BytePos(
            53,
        ),
        ctxt: #0,
    },
    len: 0,
    index: 0,
}
 --> $DIR/tests/conformance/types/tuple/emptyTuples/emptyTuplesTypeAssertion01.ts:4:11
  |
4 | let y = x[0];
  |           ^

